# policy-engine

./: Cargo.toml  README.md
metadata/: project_fail.json  project_pass.json
policies/: controls_base.json  controls_ia.json  controls_llm.json  controls_sro.json
src/: lib.rs  main.rs  schema_generator.rs
tests/: engine_tests.rs
tests/test_cases/metadata/: meta_allof_fail.json  meta_allof_pass.json  meta_anyof_fail.json  meta_anyof_pass.json  meta_contains_fail.json  meta_contains_pass.json  meta_equals_fail.json  meta_equals_pass.json  meta_exists_pass.json  meta_if_then_else_fail_1.json  meta_if_then_else_fail_2.json  meta_if_then_else_pass_1.json  meta_if_then_else_pass_2.json  meta_if_then_fail.json  meta_if_then_pass_1.json  meta_if_then_pass_2.json  meta_not_pass.json  meta_some_fail.json  meta_some_pass.json
tests/test_cases/policies/: policy_allof.json  policy_anyof.json  policy_contains.json  policy_equals.json  policy_exists.json  policy_if_then.json  policy_if_then_else.json  policy_not.json  policy_some.json
