[package]
name = "policy_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "policy_engine"
path = "src/lib.rs"

[[bin]]
name = "policy_engine_cli"
path = "src/main.rs"

[[bin]]
name = "schema_generator"
path = "src/schema_generator.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
